[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme/fonts/kenney_mini_square.tres" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=2]
[ext_resource path="res://assets/art/player/parado.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/dialogo.png" type="Texture" id=4]
[ext_resource path="res://src/UserInterface/CaixaTexto.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/sfx/fala.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.12549 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="CaixaTexto" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Parado" type="Sprite" parent="."]
position = Vector2( 682, 480 )
scale = Vector2( 0.355945, 0.355945 )
texture = ExtResource( 3 )
offset = Vector2( 0, -180.569 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.575
anchor_right = 1.0
anchor_bottom = 0.971
margin_left = 22.0
margin_top = -3.05176e-05
margin_right = -228.0
margin_bottom = -0.0800476
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.036
anchor_top = 0.074
anchor_right = 0.967
anchor_bottom = 0.837
margin_left = 0.199999
margin_top = -0.0600004
margin_right = 0.149963
margin_bottom = -0.0299988
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus elit, faucibus a eleifend sit amet, tristique et nisi. Fusce congue ultrices ipsum. Sed eget dui nisl. Aliquam eu eros nisi. Fusce vestibulum quam at nunc mattis, nec accumsan nunc aliquam. Pellentesque fermentum tellus justo, id lacinia magna aliquam id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices"
autowrap = true
clip_text = true
percent_visible = 0.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="SfxFala" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
